iso/funtoo-live-testing.yaml: Disabling macaroni-security-dev temporary

--- a/iso/funtoo-live-testing.yaml
+++ b/iso/funtoo-live-testing.yaml
@@ -23,6 +23,8 @@ packages:
   - www-client/firefox-bin
   - gnome-base/gnome
 
+  - sys-apps/gentoo-functions
+
   - app-editors/vim
 
   # kernel stuff
@@ -135,12 +137,6 @@ packages:
   - sys-devel/llvm-common
   - sys-devel-11/llvm
 
-# equery belongs libstd-008055cc7d873802.so (fix ldconfig)
-# * Searching for libstd-008055cc7d873802.so ... 
-#dev-lang/rust-bin-1.55.0 (/opt/rust-bin-1.55.0/lib/libstd-008055cc7d873802.so)
-#dev-lang/rust-bin-1.55.0 (/opt/rust-bin-1.55.0/lib/rustlib/x86_64-unknown-linux-gnu/lib/libstd-008055cc7d873802.so)
-  # rust-bin 
-
   # Live additional packages
   - media-gfx-2/gimp
   - media-gfx/inkscape
@@ -200,7 +196,7 @@ repository:
   - repository/mottainai-testing
   - repository/macaroni-funtoo-dev
   - repository/macaroni-commons-dev
-  - repository/macaroni-security-dev
+#  - repository/macaroni-security-dev
 
 initramfs:
   kernel_file: "bzImage"
