toolchain/desktop: Update rdeps

--- a/packages/toolchain/desktop/definition.yaml
+++ b/packages/toolchain/desktop/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: desktop
 version: "1"
-description: "Virtul package to install portage meta data of the desktop packages"
+description: "Virtual package to install portage meta data of the desktop packages"
 requires:
   - name: dia
     category: app-office
@@ -107,6 +107,9 @@ requires:
     version: '>=0'
   - name: youtube-dl
     category: net-misc
+    version: '>=0'
+  - name: networkmanager-fortisslvpn
+    category: net-vpn
     version: '>=0'
   - name: networkmanager-openconnect
     category: net-vpn
