toolchain/*: Fix typo

--- a/packages/toolchain/base-audio/definition.yaml
+++ b/packages/toolchain/base-audio/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-audio
 version: "1"
-description: "Virtul package to install portage meta data of the base-audio packages"
+description: "Virtual package to install portage meta data of the base-audio packages"
 requires:
   - name: orc
     category: dev-lang
