--- a/packages/toolchain/base-editors/definition.yaml
+++ b/packages/toolchain/base-editors/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-editors
 version: "1"
-description: "Virtul package to install portage meta data of the base-editors packages"
+description: "Virtual package to install portage meta data of the base-editors packages"
 requires:
   - name: vim
     category: app-editors
