--- a/packages/toolchain/base-fs/definition.yaml
+++ b/packages/toolchain/base-fs/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-fs
 version: "1"
-description: "Virtul package to install portage meta data of the base-fs packages"
+description: "Virtual package to install portage meta data of the base-fs packages"
 requires:
   - name: cdrtools
     category: app-cdr
