--- a/packages/toolchain/base-gnome2/definition.yaml
+++ b/packages/toolchain/base-gnome2/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-gnome2
 version: "1"
-description: "Virtul package to install portage meta data of the base-gnome2 packages"
+description: "Virtual package to install portage meta data of the base-gnome2 packages"
 requires:
   - name: caribou
     category: app-accessibility
