--- a/packages/toolchain/base-gnome4/definition.yaml
+++ b/packages/toolchain/base-gnome4/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-gnome4
 version: "1"
-description: "Virtul package to install portage meta data of the base-gnome4 packages"
+description: "Virtual package to install portage meta data of the base-gnome4 packages"
 requires:
   - name: brasero
     category: app-cdr
