--- a/packages/toolchain/base-kde2/definition.yaml
+++ b/packages/toolchain/base-kde2/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-kde2
 version: "1"
-description: "Virtul package to install portage meta data of the base-kde2 packages"
+description: "Virtual package to install portage meta data of the base-kde2 packages"
 requires:
   - name: calamares
     category: app-admin-5
