--- a/packages/toolchain/base-kde3/definition.yaml
+++ b/packages/toolchain/base-kde3/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-kde3
 version: "1"
-description: "Virtul package to install portage meta data of the base-kde3 packages"
+description: "Virtual package to install portage meta data of the base-kde3 packages"
 requires:
   - name: convertlit
     category: app-text
