--- a/packages/toolchain/base-lang/definition.yaml
+++ b/packages/toolchain/base-lang/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-lang
 version: "1"
-description: "Virtul package to install portage meta data of the base-lang packages"
+description: "Virtual package to install portage meta data of the base-lang packages"
 requires:
   - name: eselect-ctags
     category: app-eselect
