--- a/packages/toolchain/base-latex/definition.yaml
+++ b/packages/toolchain/base-latex/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-latex
 version: "1"
-description: "Virtul package to install portage meta data of the base-latex packages"
+description: "Virtual package to install portage meta data of the base-latex packages"
 requires:
   - name: t1utils
     category: app-text
