--- a/packages/toolchain/base-multimedia2/definition.yaml
+++ b/packages/toolchain/base-multimedia2/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-multimedia2
 version: "1"
-description: "Virtul package to install portage meta data of the base-multimedia2 packages"
+description: "Virtual package to install portage meta data of the base-multimedia2 packages"
 requires:
   - name: uchardet
     category: app-i18n
