--- a/packages/toolchain/base-multimedia3/definition.yaml
+++ b/packages/toolchain/base-multimedia3/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-multimedia3
 version: "1"
-description: "Virtul package to install portage meta data of the base-multimedia3 packages"
+description: "Virtual package to install portage meta data of the base-multimedia3 packages"
 requires:
   - name: eselect-mpg123
     category: app-eselect
