--- a/packages/toolchain/base-net/definition.yaml
+++ b/packages/toolchain/base-net/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-net
 version: "1"
-description: "Virtul package to install portage meta data of the base-net packages"
+description: "Virtual package to install portage meta data of the base-net packages"
 requires:
   - name: apache-tools
     category: app-admin
