--- a/packages/toolchain/base-qt/definition.yaml
+++ b/packages/toolchain/base-qt/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-qt
 version: "1"
-description: "Virtul package to install portage meta data of the base-qt packages"
+description: "Virtual package to install portage meta data of the base-qt packages"
 requires:
   - name: ibus
     category: app-i18n
