--- a/packages/toolchain/base-text/definition.yaml
+++ b/packages/toolchain/base-text/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-text
 version: "1"
-description: "Virtul package to install portage meta data of the base-text packages"
+description: "Virtual package to install portage meta data of the base-text packages"
 requires:
   - name: dvipsk
     category: app-text
