--- a/packages/toolchain/base-tools2/definition.yaml
+++ b/packages/toolchain/base-tools2/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-tools2
 version: "1"
-description: "Virtul package to install portage meta data of the base-tools2 packages"
+description: "Virtual package to install portage meta data of the base-tools2 packages"
 requires:
   - name: libmd
     category: app-crypt
