--- a/packages/toolchain/base-video/definition.yaml
+++ b/packages/toolchain/base-video/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-video
 version: "1"
-description: "Virtul package to install portage meta data of the base-video packages"
+description: "Virtual package to install portage meta data of the base-video packages"
 requires:
   - name: yasm
     category: dev-lang
