--- a/packages/toolchain/boot/definition.yaml
+++ b/packages/toolchain/boot/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: boot
 version: "1"
-description: "Virtul package to install portage meta data of the boot packages"
+description: "Virtual package to install portage meta data of the boot packages"
 requires:
   - name: sbsigntools
     category: app-crypt
