--- a/packages/toolchain/db/definition.yaml
+++ b/packages/toolchain/db/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: db
 version: "1"
-description: "Virtul package to install portage meta data of the db packages"
+description: "Virtual package to install portage meta data of the db packages"
 requires:
   - name: mongo-tools
     category: app-admin
