--- a/packages/toolchain/devtools/definition.yaml
+++ b/packages/toolchain/devtools/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: devtools
 version: "1"
-description: "Virtul package to install portage meta data of the devtools packages"
+description: "Virtual package to install portage meta data of the devtools packages"
 requires:
   - name: vscode-bin
     category: app-editors
