--- a/packages/toolchain/emulation/definition.yaml
+++ b/packages/toolchain/emulation/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: emulation
 version: "1"
-description: "Virtul package to install portage meta data of the emulation packages"
+description: "Virtual package to install portage meta data of the emulation packages"
 requires:
   - name: containerd
     category: app-emulation
