--- a/packages/toolchain/fonts/definition.yaml
+++ b/packages/toolchain/fonts/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: fonts
 version: "1"
-description: "Virtul package to install portage meta data of the fonts packages"
+description: "Virtual package to install portage meta data of the fonts packages"
 requires:
   - name: cabextract
     category: app-arch
