--- a/packages/toolchain/funtoo/definition.yaml
+++ b/packages/toolchain/funtoo/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: funtoo
 version: "1"
-description: "Virtul package to install portage meta data of the funtoo packages"
+description: "Virtual package to install portage meta data of the funtoo packages"
 requires:
   - name: fchroot
     category: sys-apps
