--- a/packages/toolchain/i3/definition.yaml
+++ b/packages/toolchain/i3/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: i3
 version: "1"
-description: "Virtul package to install portage meta data of the i3 packages"
+description: "Virtual package to install portage meta data of the i3 packages"
 requires:
   - name: confuse
     category: dev-libs
