--- a/packages/toolchain/nvidia/definition.yaml
+++ b/packages/toolchain/nvidia/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: nvidia
 version: "1"
-description: "Virtul package to install portage meta data of the nvidia packages"
+description: "Virtual package to install portage meta data of the nvidia packages"
 requires:
   - name: libnvidia-container-bin
     category: app-emulation
