--- a/packages/toolchain/release/definition.yaml
+++ b/packages/toolchain/release/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: release
 version: "1"
-description: "Virtul package to install portage meta data of the release packages"
+description: "Virtual package to install portage meta data of the release packages"
 requires:
   - name: lsb-release
     category: sys-apps
