--- a/packages/toolchain/shells/definition.yaml
+++ b/packages/toolchain/shells/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: shells
 version: "1"
-description: "Virtul package to install portage meta data of the shells packages"
+description: "Virtual package to install portage meta data of the shells packages"
 requires:
   - name: hyperfine
     category: app-benchmarks
