--- a/packages/toolchain/telemetry/definition.yaml
+++ b/packages/toolchain/telemetry/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: telemetry
 version: "1"
-description: "Virtul package to install portage meta data of the telemetry packages"
+description: "Virtual package to install portage meta data of the telemetry packages"
 requires:
   - name: alertmanager-bin
     category: app-metrics
