--- a/packages/toolchain/x11-misc/definition.yaml
+++ b/packages/toolchain/x11-misc/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: x11-misc
 version: "1"
-description: "Virtul package to install portage meta data of the x11-misc packages"
+description: "Virtual package to install portage meta data of the x11-misc packages"
 requires:
   - name: gvim
     category: app-editors
