--- a/packages/toolchain/xfce/definition.yaml
+++ b/packages/toolchain/xfce/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: xfce
 version: "1"
-description: "Virtul package to install portage meta data of the xfce packages"
+description: "Virtual package to install portage meta data of the xfce packages"
 requires:
   - name: keybinder
     category: dev-libs-3
