--- a/packages/toolchain/xorg-base/definition.yaml
+++ b/packages/toolchain/xorg-base/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: xorg-base
 version: "1"
-description: "Virtul package to install portage meta data of the xorg-base packages"
+description: "Virtual package to install portage meta data of the xorg-base packages"
 requires:
   - name: gcr
     category: app-crypt
