--- a/packages/toolchain/base-extra/definition.yaml
+++ b/packages/toolchain/base-extra/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-extra
 version: "1"
-description: "Virtul package to install portage meta data of the base-extra packages"
+description: "Virtual package to install portage meta data of the base-extra packages"
 requires:
   - name: cpio
     category: app-arch
