--- a/packages/toolchain/base-gnome/definition.yaml
+++ b/packages/toolchain/base-gnome/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-gnome
 version: "1"
-description: "Virtul package to install portage meta data of the base-gnome packages"
+description: "Virtual package to install portage meta data of the base-gnome packages"
 requires:
   - name: eselect-lib-bin-symlink
     category: app-eselect
