--- a/packages/toolchain/base-gnome3/definition.yaml
+++ b/packages/toolchain/base-gnome3/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-gnome3
 version: "1"
-description: "Virtul package to install portage meta data of the base-gnome3 packages"
+description: "Virtual package to install portage meta data of the base-gnome3 packages"
 requires:
   - name: pax
     category: app-arch
