--- a/packages/toolchain/base-gtk/definition.yaml
+++ b/packages/toolchain/base-gtk/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-gtk
 version: "1"
-description: "Virtul package to install portage meta data of the base-gtk packages"
+description: "Virtual package to install portage meta data of the base-gtk packages"
 requires:
   - name: at-spi2-atk
     category: app-accessibility-2
