--- a/packages/toolchain/base-gtk2/definition.yaml
+++ b/packages/toolchain/base-gtk2/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-gtk2
 version: "1"
-description: "Virtul package to install portage meta data of the base-gtk2 packages"
+description: "Virtual package to install portage meta data of the base-gtk2 packages"
 requires:
   - name: gcab
     category: app-arch
