--- a/packages/toolchain/base-kde/definition.yaml
+++ b/packages/toolchain/base-kde/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-kde
 version: "1"
-description: "Virtul package to install portage meta data of the base-kde packages"
+description: "Virtual package to install portage meta data of the base-kde packages"
 requires:
   - name: qca
     category: app-crypt-2
