--- a/packages/toolchain/base-latex2/definition.yaml
+++ b/packages/toolchain/base-latex2/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-latex2
 version: "1"
-description: "Virtul package to install portage meta data of the base-latex2 packages"
+description: "Virtual package to install portage meta data of the base-latex2 packages"
 requires:
   - name: texlive-langcyrillic
     category: dev-texlive
