--- a/packages/toolchain/base-multimedia/definition.yaml
+++ b/packages/toolchain/base-multimedia/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-multimedia
 version: "1"
-description: "Virtul package to install portage meta data of the base-multimedia packages"
+description: "Virtual package to install portage meta data of the base-multimedia packages"
 requires:
   - name: flite
     category: app-accessibility
