--- a/packages/toolchain/base-multimedia4/definition.yaml
+++ b/packages/toolchain/base-multimedia4/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-multimedia4
 version: "1"
-description: "Virtul package to install portage meta data of the base-multimedia4 packages"
+description: "Virtual package to install portage meta data of the base-multimedia4 packages"
 requires:
   - name: libxmlpp
     category: dev-cpp-2.6
