--- a/packages/toolchain/base-net2/definition.yaml
+++ b/packages/toolchain/base-net2/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-net2
 version: "1"
-description: "Virtul package to install portage meta data of the base-net2 packages"
+description: "Virtual package to install portage meta data of the base-net2 packages"
 requires:
   - name: metalog
     category: app-admin
