--- a/packages/toolchain/base-python/definition.yaml
+++ b/packages/toolchain/base-python/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-python
 version: "1"
-description: "Virtul package to install portage meta data of the base-python packages"
+description: "Virtual package to install portage meta data of the base-python packages"
 requires:
   - name: eselect-rust
     category: app-eselect
