--- a/packages/toolchain/base-qt2/definition.yaml
+++ b/packages/toolchain/base-qt2/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-qt2
 version: "1"
-description: "Virtul package to install portage meta data of the base-qt2 packages"
+description: "Virtual package to install portage meta data of the base-qt2 packages"
 requires:
   - name: brotli
     category: app-arch
