--- a/packages/toolchain/base-text2/definition.yaml
+++ b/packages/toolchain/base-text2/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-text2
 version: "1"
-description: "Virtul package to install portage meta data of the base-text2 packages"
+description: "Virtual package to install portage meta data of the base-text2 packages"
 requires:
   - name: a2ps
     category: app-text
