--- a/packages/toolchain/base-tools/definition.yaml
+++ b/packages/toolchain/base-tools/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-tools
 version: "1"
-description: "Virtul package to install portage meta data of the base-tools packages"
+description: "Virtual package to install portage meta data of the base-tools packages"
 requires:
   - name: perl-cleaner
     category: app-admin
