--- a/packages/toolchain/base-xorg/definition.yaml
+++ b/packages/toolchain/base-xorg/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-xorg
 version: "1"
-description: "Virtul package to install portage meta data of the base-xorg packages"
+description: "Virtual package to install portage meta data of the base-xorg packages"
 requires:
   - name: yelp-tools
     category: app-text
