--- a/packages/toolchain/base-xorg2/definition.yaml
+++ b/packages/toolchain/base-xorg2/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base-xorg2
 version: "1"
-description: "Virtul package to install portage meta data of the base-xorg2 packages"
+description: "Virtual package to install portage meta data of the base-xorg2 packages"
 requires:
   - name: eselect-fontconfig
     category: app-eselect
