--- a/packages/toolchain/base/definition.yaml
+++ b/packages/toolchain/base/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: base
 version: "1"
-description: "Virtul package to install portage meta data of the base packages"
+description: "Virtual package to install portage meta data of the base packages"
 requires:
   - name: ego
     category: app-admin
