--- a/packages/toolchain/e17/definition.yaml
+++ b/packages/toolchain/e17/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: e17
 version: "1"
-description: "Virtul package to install portage meta data of the e17 packages"
+description: "Virtual package to install portage meta data of the e17 packages"
 requires:
   - name: efl
     category: dev-libs
