--- a/packages/toolchain/gnome-extra/definition.yaml
+++ b/packages/toolchain/gnome-extra/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: gnome-extra
 version: "1"
-description: "Virtul package to install portage meta data of the gnome-extra packages"
+description: "Virtual package to install portage meta data of the gnome-extra packages"
 requires:
   - name: gkrellm
     category: app-admin-2
