--- a/packages/toolchain/gnome-games/definition.yaml
+++ b/packages/toolchain/gnome-games/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: gnome-games
 version: "1"
-description: "Virtul package to install portage meta data of the gnome-games packages"
+description: "Virtual package to install portage meta data of the gnome-games packages"
 requires:
   - name: gnome-nibbles
     category: games-arcade
