--- a/packages/toolchain/lxqt/definition.yaml
+++ b/packages/toolchain/lxqt/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: lxqt
 version: "1"
-description: "Virtul package to install portage meta data of the lxqt packages"
+description: "Virtual package to install portage meta data of the lxqt packages"
 requires:
   - name: qtxdg-tools
     category: app-misc
