--- a/packages/toolchain/lxqt/firmware/definition.yaml
+++ b/packages/toolchain/lxqt/firmware/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: firmware
 version: "1"
-description: "Virtul package to install portage meta data of the firmware packages"
+description: "Virtual package to install portage meta data of the firmware packages"
 requires:
   - name: b43-fwcutter
     category: net-wireless
