--- a/packages/toolchain/portage-tools/definition.yaml
+++ b/packages/toolchain/portage-tools/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: portage-tools
 version: "1"
-description: "Virtul package to install portage meta data of the portage-tools packages"
+description: "Virtual package to install portage meta data of the portage-tools packages"
 requires:
   - name: eix
     category: app-portage
