--- a/packages/toolchain/python-extra/definition.yaml
+++ b/packages/toolchain/python-extra/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: python-extra
 version: "1"
-description: "Virtul package to install portage meta data of the python-extra packages"
+description: "Virtual package to install portage meta data of the python-extra packages"
 requires:
   - name: eselect-wxwidgets
     category: app-eselect
