--- a/packages/toolchain/tools/definition.yaml
+++ b/packages/toolchain/tools/definition.yaml
@@ -1,7 +1,7 @@
 category: toolchain
 name: tools
 version: "1"
-description: "Virtul package to install portage meta data of the tools packages"
+description: "Virtual package to install portage meta data of the tools packages"
 requires:
   - name: hddtemp
     category: app-admin
