--- a/packages/atoms/desktop/net-vpn/networkmanager-fortisslvpn/build.yaml
+++ b/packages/atoms/desktop/net-vpn/networkmanager-fortisslvpn/build.yaml
@@ -1,4 +1,10 @@
 prelude:
+# Temporary patch
+- >-
+  cp networkmanager-fortisslvpn-1.2.8.ebuild /var/git/meta-repo/kits/net-kit/net-vpn/networkmanager-fortisslvpn/ &&
+  cd /var/git/meta-repo/kits/net-kit/net-vpn/networkmanager-fortisslvpn/ &&
+  ebuild networkmanager-fortisslvpn-1.2.8.ebuild digest &&
+  cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
