--- a/packages/atoms/server/dev-libs/libgamin/definition.yaml
+++ b/packages/atoms/server/dev-libs/libgamin/definition.yaml
@@ -1,13 +1,9 @@
 name: libgamin
-version: 0.1.10
+version: 0.1.10+1
 category: dev-libs
 use_flags:
+- -python
 - -python_targets_python2_7
-- python
-requires:
-- name: python-exec
-  version: '>=0'
-  category: dev-lang-2
 annotations:
   subsets:
     rules:
