--- a/packages/atoms/desktop2/app-accessibility/espeak-ng/build.yaml
+++ b/packages/atoms/desktop2/app-accessibility/espeak-ng/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# Temporary
+- >-
+  cp espeak-ng-1.51-r1.ebuild /var/git/meta-repo/kits/media-kit/app-accessibility/espeak-ng/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
