media-gfx/plantuml: Bump v.8046+3

--- a/packages/atoms/desktop2/media-gfx/plantuml/build.yaml
+++ b/packages/atoms/desktop2/media-gfx/plantuml/build.yaml
@@ -2,7 +2,7 @@ prelude:
 # Temporary
 - >-
   luet repo update &&
-  luet repo upgrade &&
+  luet upgrade &&
   luet cleanup
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
