--- a/packages/atoms/desktop2/media-gfx/plantuml/build.yaml
+++ b/packages/atoms/desktop2/media-gfx/plantuml/build.yaml
@@ -3,7 +3,8 @@ prelude:
 - >-
   luet repo update &&
   luet upgrade &&
-  luet cleanup
+  luet cleanup &&
+  eselect java-vm set system openjdk-bin-17
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
