sys-apps/xdg-desktop-portal: Bump v.1.8.0+1

--- a/packages/atoms/base-kde4/sys-apps/xdg-desktop-portal/definition.yaml
+++ b/packages/atoms/base-kde4/sys-apps/xdg-desktop-portal/definition.yaml
@@ -1,18 +1,18 @@
 name: xdg-desktop-portal
-version: 1.8.0
+version: 1.8.0+1
 category: sys-apps
 use_flags:
 - -doc
+- -geolocation
 - -test
-- geolocation
 - screencast
 requires:
-- name: geoclue
-  version: '>=0'
-  category: app-misc-2.0
 - name: glib
   version: '>=0'
   category: dev-libs-2
+- name: json-glib
+  version: '>=0'
+  category: dev-libs
 - name: fontconfig
   version: '>=0'
   category: media-libs-1.0
