atoms/server: Review build order

--- a/packages/atoms/server/dev-libs/librdkafka/build.yaml
+++ b/packages/atoms/server/dev-libs/librdkafka/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: czmq
+- name: liblognorm
   version: '>=0'
-  category: net-libs
+  category: dev-libs
