--- a/packages/atoms/server/app-admin/rsyslog/build.yaml
+++ b/packages/atoms/server/app-admin/rsyslog/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: liblognorm
+- name: rabbitmq-c
   version: '>=0'
-  category: dev-libs
+  category: net-libs
