--- a/packages/atoms/server/dev-libs/liblognorm/build.yaml
+++ b/packages/atoms/server/dev-libs/liblognorm/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: rabbitmq-c
+- name: libfastjson
   version: '>=0'
-  category: net-libs
+  category: dev-libs
