--- a/packages/atoms/server/net-libs/libmicrohttpd/build.yaml
+++ b/packages/atoms/server/net-libs/libmicrohttpd/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libesmtp
+- name: libestr
   version: '>=0'
-  category: net-libs
+  category: dev-libs
