app-admin/rsyslog: Bump v.8.2306.0+1

--- a/packages/atoms/server/app-admin/rsyslog/definition.yaml
+++ b/packages/atoms/server/app-admin/rsyslog/definition.yaml
@@ -1,5 +1,5 @@
 name: rsyslog
-version: 8.2306.0
+version: 8.2306.0+1
 category: app-admin
 use_flags:
 - -clickhouse
@@ -35,6 +35,7 @@ use_flags:
 - uuid
 - xxhash
 - zeromq
+- drafts
 requires:
 - name: libdbi
   version: '>=0'
