--- a/packages/atoms/server/net-libs/czmq/definition.yaml
+++ b/packages/atoms/server/net-libs/czmq/definition.yaml
@@ -1,5 +1,5 @@
 name: czmq
-version: 4.2.1
+version: 4.2.1+1
 category: net-libs
 use_flags:
 - -nss
@@ -7,6 +7,7 @@ use_flags:
 - http-server
 - lz4
 - uuid
+- drafts
 requires:
 - name: lz4
   version: '>=0'
