--- a/packages/atoms/desktop2/media-libs/opencv/build.yaml
+++ b/packages/atoms/desktop2/media-libs/opencv/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+- >-
+  eselect blas set 1 &&
+  eselect cblas set 1
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
