--- a/packages/atoms/desktop2/media-libs/opencv/build.yaml
+++ b/packages/atoms/desktop2/media-libs/opencv/build.yaml
@@ -1,7 +1,7 @@
 prelude:
 - >-
-  eselect blas set 1 &&
-  eselect cblas set 1
+  eval 'eselect blas set 1 || true' &&
+  eval 'eselect cblas set 2 || true'
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
