--- a/packages/atoms/desktop2/dev-libs/flatbuffers/build.yaml
+++ b/packages/atoms/desktop2/dev-libs/flatbuffers/build.yaml
@@ -1,4 +1,10 @@
 prelude:
+# Temporary
+- >-
+  cp flatbuffers-23.5.26.ebuild /var/git/meta-repo/kits/dev-kit/dev-libs/flatbuffers/ &&
+  cd /var/git/meta-repo/kits/dev-kit/dev-libs/flatbuffers/ &&
+  ebuild flatbuffers-23.5.26.ebuild digest &&
+  cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
