--- a/packages/atoms/base-multimedia4/media-libs/quirc/build.yaml
+++ b/packages/atoms/base-multimedia4/media-libs/quirc/build.yaml
@@ -1,4 +1,10 @@
 prelude:
+# Temporary
+- >-
+  cp quirc-1.2.ebuild /var/git/meta-repo/kits/media-kit/media-libs/quirc/ &&
+  cd /var/git/meta-repo/kits/media-kit/media-libs/quirc/ &&
+  ebuild quirc-1.2.ebuild digest &&
+  cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
