--- a/packages/atoms/desktop2/media-libs/opencv/build.yaml
+++ b/packages/atoms/desktop2/media-libs/opencv/build.yaml
@@ -1,7 +1,12 @@
 prelude:
 - >-
   eval 'eselect blas set 1 || true' &&
-  eval 'eselect cblas set 2 || true'
+  eval 'eselect cblas set 2 || true' &&
+  eval 'eselect lapack set 1 || true' &&
+  cp opencv-4.8.0.ebuild /var/git/meta-repo/kits/media-kit/media-libs/opencv/ &&
+  luet repo update &&
+  luet upgrade &&
+  luet cleanup
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
