--- a/packages/atoms/desktop2/dev-libs/flatbuffers/build.yaml
+++ b/packages/atoms/desktop2/dev-libs/flatbuffers/build.yaml
@@ -1,10 +1,8 @@
 prelude:
 # Temporary
-- >-
-  cp flatbuffers-23.5.26.ebuild /var/git/meta-repo/kits/dev-kit/dev-libs/flatbuffers/ &&
-  cd /var/git/meta-repo/kits/dev-kit/dev-libs/flatbuffers/ &&
-  ebuild flatbuffers-23.5.26.ebuild digest &&
-  cd -
+- cp flatbuffers-23.5.26.ebuild /var/git/meta-repo/kits/dev-kit/dev-libs/flatbuffers/
+  && cd /var/git/meta-repo/kits/dev-kit/dev-libs/flatbuffers/ && ebuild flatbuffers-23.5.26.ebuild
+  digest && cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
@@ -30,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race18
+- name: hdf5
   version: '>=0'
-  category: seed
+  category: sci-libs
