--- a/packages/atoms/desktop2/media-libs/opencv/definition.yaml
+++ b/packages/atoms/desktop2/media-libs/opencv/definition.yaml
@@ -1,8 +1,7 @@
 name: opencv
-version: 4.8.0+5
+version: 4.8.0+6
 category: media-libs
 use_flags:
-- -contrib
 - -cuda
 - -eigen
 - -gdal
@@ -23,6 +22,7 @@ use_flags:
 - -vtk
 - -webp
 - -xine
+- contrib
 - ffmpeg
 - gstreamer
 - gtk
@@ -59,6 +59,9 @@ requires:
 - name: ffmpeg
   version: '>=0'
   category: media-video
+- name: hdf5
+  version: '>=0'
+  category: sci-libs
 - name: glu
   version: '>=0'
   category: virtual
