--- a/packages/atoms/desktop2/media-libs/libopenshot/build.yaml
+++ b/packages/atoms/desktop2/media-libs/libopenshot/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# Temporary
+- >-
+  cp libopenshot-0.2.7-r1.ebuild /var/git/extra-kits/geaaru-kit/media-libs/libopenshot/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
