--- a/packages/atoms/desktop2/media-sound/fluidsynth/build.yaml
+++ b/packages/atoms/desktop2/media-sound/fluidsynth/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race18
+- name: libfmt
   version: '>=0'
-  category: seed
+  category: dev-libs
