--- a/packages/atoms-extra/dev/app-text/discount/definition.yaml
+++ b/packages/atoms-extra/dev/app-text/discount/definition.yaml
@@ -1,5 +1,5 @@
 name: discount
-version: 2.2.7b
+version: 2.2.7d
 category: app-text
 annotations:
   subsets:
@@ -18,4 +18,4 @@ labels:
   kit: text-kit
   original.package.name: app-text/discount
   original.package.slot: "0"
-  original.package.version: 2.2.7b
+  original.package.version: 2.2.7d
