--- a/packages/atoms-extra/dev/dev-python/httpcore/definition.yaml
+++ b/packages/atoms-extra/dev/dev-python/httpcore/definition.yaml
@@ -1,5 +1,5 @@
 name: httpcore
-version: 0.17.3
+version: 0.18.0
 category: dev-python
 use_flags:
 - -python_targets_python3_10
@@ -34,7 +34,8 @@ labels:
   BDEPEND: python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
     ( dev-lang/python:3.9 ) python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python3_10?
     ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
-    >=dev-python/setuptools-42.0.2[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
+    >=dev-python/gpep517-6[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
+    >=dev-python/hatchling-1.3.1[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
   IUSE: python_targets_python3_7 python_targets_python3_9 python_targets_python3_8
     python_targets_python3_10
   RDEPEND: dev-python/h11[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
@@ -49,4 +50,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/httpcore
   original.package.slot: "0"
-  original.package.version: 0.17.3
+  original.package.version: 0.18.0
