--- a/iso/funtoo-i3-testing.yaml
+++ b/iso/funtoo-i3-testing.yaml
@@ -3,15 +3,15 @@ packages:
   keep_luet_db: "true"
   rootfs:
   - system/entities
+  - app-admin/macaronictl-thin
   - system/luet-geaaru-testing
   - utils/yq
   - utils/jq
 
   - app-admin/whip
-  - app-admin/macaronictl-thin
   - whip-profiles/macaroni
   - macaroni/live-setup-i3
-  - macaroni-release/funtoo
+  - macaroni-release/phoenix
   - system/macaroni-funtoo-calamares
   - macaroni/whip-catalog
   - macaroni/skel-phoenix
@@ -22,6 +22,8 @@ packages:
   - virtual/openrc
 
   - virtual-entities/base
+
+  - sys-apps/gentoo-functions
 
   - vim
   - vim-core
@@ -47,7 +49,7 @@ packages:
   - sys-kernel/linux-firmware
   - sys-kernel/dracut
   - sys-fs/mdadm
-  - www-client/firefox-bin
+  - www-client/firefox
 
   - sys-apps/shadow
   - sys-apps/iproute2
@@ -130,7 +132,7 @@ packages:
 
   # Needed by /usr/lib64/dri/*.so
   - sys-devel/llvm-common
-  - sys-devel-11/llvm
+  - llvm
 
   # Dependency of calamares
   - kde-frameworks-5/plasma
@@ -147,9 +149,9 @@ packages:
 # Repositories packages from repository-index
 repository:
   packages:
-  - repository/mottainai-dev
-  - repository/macaroni-funtoo-dev
-  - repository/macaroni-commons-dev
+  - repository/mottainai-testing
+  - repository/macaroni-funtoo-testing
+  - repository/macaroni-commons-testing
 
 initramfs:
   kernel_file: "bzImage"
