iso/funtoo-live-testing.yaml: Using testing repos

--- a/iso/funtoo-live-testing.yaml
+++ b/iso/funtoo-live-testing.yaml
@@ -10,7 +10,7 @@ packages:
 
   - macaroni/live-setup-gnome
   - macaroni/pageant
-  - macaroni-release/funtoo
+  - macaroni-release/phoenix
 
   - virtual/sh
   - virtual/base
@@ -25,7 +25,8 @@ packages:
 
   - sys-apps/gentoo-functions
 
-  - app-editors/vim
+  - vim
+  - vim-core
 
   # kernel stuff
   - kernel-6.1/macaroni-full
@@ -196,8 +197,8 @@ packages:
 repository:
   packages:
   - repository/mottainai-testing
-  - repository/macaroni-funtoo-dev
-  - repository/macaroni-commons-dev
+  - repository/macaroni-funtoo-testing
+  - repository/macaroni-commons-testing
 #  - repository/macaroni-security-dev
 
 initramfs:
