--- a/iso/funtoo-xfce-testing.yaml
+++ b/iso/funtoo-xfce-testing.yaml
@@ -151,10 +151,10 @@ packages:
 # Repositories packages from repository-index
 repository:
   packages:
-  - repository/mottainai-dev
-  - repository/macaroni-funtoo-dev
-  - repository/macaroni-commons-dev
-  - repository/macaroni-security-dev
+  - repository/mottainai-testing
+  - repository/macaroni-funtoo-testing
+  - repository/macaroni-commons-testing
+  #- repository/macaroni-security-dev
 
 initramfs:
   kernel_file: "bzImage"
