portage-converter/telemetry: Add freeradius_exporter pkg

--- a/portage-converter/telemetry.yaml
+++ b/portage-converter/telemetry.yaml
@@ -110,6 +110,7 @@ artefacts:
     - app-metrics/blackbox_exporter-bin
     - app-metrics/prometheus-bin
     - app-metrics/alertmanager-bin
+    - app-metrics/freeradius_exporter
 
 - tree: packages/atoms/telemetry
   uses:
