portage-converter/gnome-extra: Add gtk-engines:2

--- a/portage-converter/gnome-extra.yaml
+++ b/portage-converter/gnome-extra.yaml
@@ -324,6 +324,7 @@ artefacts:
   packages:
     - x11-themes/murrine-themes
     - x11-themes/funtoo-gnome-shell-theme
+    - x11-themes/gtk-engines:2
 
 include_layers:
 - layers/macaroni-funtoo-race16.yaml
