portage-converter/desktop: Add net-vpn/networkmanager-fortisslvpn

--- a/portage-converter/desktop.yaml
+++ b/portage-converter/desktop.yaml
@@ -414,33 +414,6 @@ artefacts:
     - media-gfx/simple-scan
 
 #- tree: packages/atoms/desktop
-#  mutations:
-#    runtime_deps:
-#      # K3B using kinit on init phase.
-#      packages:
-#        - category: kde-frameworks-5
-#          name: kinit
-#  uses:
-#    disabled:
-#      - debug
-#      - test
-#    enabled:
-#      - dvd
-#      - encode
-#      - ffmpeg
-#      - flac
-#      - map
-#      - mp3
-#      - musepack
-#      - sndfile
-#      - sox
-#      - taglib
-#      - vcd
-#      - vorbis
-#  packages:
-#    - kde-apps/k3b
-
-#- tree: packages/atoms/desktop
 #  packages:
 #    - media-gfx/plantuml
 
@@ -535,6 +508,7 @@ artefacts:
     - net-vpn/networkmanager-openconnect
     - net-vpn/networkmanager-strongswan
     - net-vpn/networkmanager-vpnc
+    - net-vpn/networkmanager-fortisslvpn
     - net-misc/youtube-dl
 
 include_layers:
