portage-converter/base-fs: Add parted

--- a/portage-converter/base-fs.yml
+++ b/portage-converter/base-fs.yml
@@ -212,6 +212,14 @@ artefacts:
 - tree: packages/atoms/base-fs
   uses:
     disabled:
+      - debug
+    # device-mapper is needed for libvirt
+  packages:
+    - sys-block/parted
+
+- tree: packages/atoms/base-fs
+  uses:
+    disabled:
     - kernel
     - libressl
     - nettle
