portage-converter/kits-specs-map.yaml: Add new files

--- a/portage-converter/kits-specs-map.yaml
+++ b/portage-converter/kits-specs-map.yaml
@@ -156,6 +156,7 @@ extra-pkgs:
         - emulation2.yaml
         - server.yaml
         - desktop2.yaml
+        - php.yaml
 
     core-server-kit:
       specs:
@@ -169,6 +170,7 @@ extra-pkgs:
         - telemetry.yaml
         - python-extra.yaml
         - server.yaml
+        - php.yaml
 
     desktop-kit:
       specs:
@@ -191,6 +193,7 @@ extra-pkgs:
         - office.yaml
         - x11-misc2.yaml
         - desktop2.yaml
+        - printers.yaml
 
     java-kit:
       specs:
@@ -687,3 +690,9 @@ seeds:
 
       - file: desktop2.yaml
         dir: desktop2
+
+      - file: printers.yaml
+        dir: printers
+
+      - file: php.yaml
+        dir: php
