sys-apps/coreutils: Bump v.9.4

--- a/packages/atoms/base/sys-apps/coreutils/definition.yaml
+++ b/packages/atoms/base/sys-apps/coreutils/definition.yaml
@@ -1,5 +1,5 @@
 name: coreutils
-version: 9.3+1
+version: "9.4"
 category: sys-apps
 use_flags:
 - -gmp
@@ -52,4 +52,4 @@ labels:
   kit: core-kit
   original.package.name: sys-apps/coreutils
   original.package.slot: "0"
-  original.package.version: "9.3"
+  original.package.version: "9.4"
