sys-apps/less: Bump v.643

--- a/packages/atoms/base/sys-apps/less/definition.yaml
+++ b/packages/atoms/base/sys-apps/less/definition.yaml
@@ -1,5 +1,5 @@
 name: less
-version: 633+1
+version: "643"
 category: sys-apps
 use_flags:
 - pcre
@@ -37,4 +37,4 @@ labels:
   kit: core-kit
   original.package.name: sys-apps/less
   original.package.slot: "0"
-  original.package.version: "633"
+  original.package.version: "643"
