--- a/packages/atoms/base/dev-python/setuptools/definition.yaml
+++ b/packages/atoms/base/dev-python/setuptools/definition.yaml
@@ -1,5 +1,5 @@
 name: setuptools
-version: 68.0.0+1
+version: 68.2.2
 category: dev-python
 use_flags:
 - -python_targets_pypy3
@@ -41,4 +41,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/setuptools
   original.package.slot: "0"
-  original.package.version: 68.0.0
+  original.package.version: 68.2.2
