sys-libs/binutils-libs: Bump v.2.40

--- a/packages/atoms/base/sys-libs/binutils-libs/definition.yaml
+++ b/packages/atoms/base/sys-libs/binutils-libs/definition.yaml
@@ -1,5 +1,5 @@
 name: binutils-libs
-version: 2.39+1
+version: "2.40"
 category: sys-libs
 requires:
 - name: binutils
@@ -16,9 +16,9 @@ description: Core binutils libraries (libbfd, libopcodes, libiberty) -- skeleton
 uri:
 - ""
 labels:
-  RDEPEND: =sys-devel/binutils-2.39_p5
+  RDEPEND: =sys-devel/binutils-2.40_p5-r1
   emerge.packages: sys-libs/binutils-libs
   kit: core-kit
   original.package.name: sys-libs/binutils-libs
   original.package.slot: "0"
-  original.package.version: 2.39_p5
+  original.package.version: 2.40_p5-r1
