--- a/packages/atoms/base/dev-python/pyelftools/definition.yaml
+++ b/packages/atoms/base/dev-python/pyelftools/definition.yaml
@@ -1,5 +1,5 @@
 name: pyelftools
-version: 0.29+1
+version: "0.30"
 category: dev-python
 use_flags:
 - -python_targets_pypy3
@@ -42,4 +42,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/pyelftools
   original.package.slot: "0"
-  original.package.version: "0.29"
+  original.package.version: "0.30"
