dev-lang-3.9/python: Bump v.3.9.18

--- a/packages/atoms/base/dev-lang-3.9/python/definition.yaml
+++ b/packages/atoms/base/dev-lang-3.9/python/definition.yaml
@@ -1,5 +1,5 @@
 name: python
-version: 3.9.17+1
+version: 3.9.18
 category: dev-lang-3.9
 use_flags:
 - -bluetooth
@@ -76,4 +76,4 @@ labels:
   kit: python-kit
   original.package.name: dev-lang/python
   original.package.slot: "3.9"
-  original.package.version: 3.9.17
+  original.package.version: 3.9.18
