--- a/packages/atoms/base/dev-libs/boost/definition.yaml
+++ b/packages/atoms/base/dev-libs/boost/definition.yaml
@@ -1,5 +1,5 @@
 name: boost
-version: 1.78.0+1
+version: 1.83.0
 category: dev-libs
 use_flags:
 - -lzma
@@ -39,30 +39,26 @@ uri:
 - https://www.boost.org/
 license: Boost-1.0
 labels:
-  BDEPEND: '>=dev-util/boost-build-1.78.0-r1'
-  DEPEND: '!app-admin/eselect-boost !dev-libs/boost-numpy !<dev-libs/leatherman-1.12.0-r1
-    bzip2? ( app-arch/bzip2:=[-mgorny(-)] ) icu? ( >=dev-libs/icu-3.6:=[-mgorny(-)]
-    ) !icu? ( virtual/libiconv[-mgorny(-)] ) lzma? ( app-arch/xz-utils:=[-mgorny(-)]
-    ) mpi? ( >=virtual/mpi-2.0-r4[-mgorny(-),cxx,threads] ) python? ( python_targets_python3_7?
-    ( dev-lang/python:3.7 ) python_targets_python3_9? ( dev-lang/python:3.9 ) python_targets_python3_8?
-    ( dev-lang/python:3.8 ) python_targets_python3_10? ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
+  BDEPEND: '>=dev-util/b2-4.9.2'
+  DEPEND: bzip2? ( app-arch/bzip2:= ) icu? ( >=dev-libs/icu-3.6:= ) !icu? ( virtual/libiconv
+    ) lzma? ( app-arch/xz-utils:= ) mpi? ( >=virtual/mpi-2.0-r4[cxx,threads] ) python?
+    ( python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
+    ( dev-lang/python:3.9 ) python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python3_10?
+    ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
     numpy? ( dev-python/numpy[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
-    ) ) zlib? ( sys-libs/zlib:=[-mgorny(-)] ) zstd? ( app-arch/zstd:=[-mgorny(-)]
-    )'
-  IUSE: bzip2 context debug doc icu lzma +nls mpi numpy python tools zlib zstd python_targets_python3_7
-    python_targets_python3_9 python_targets_python3_8 python_targets_python3_10 abi_x86_32
-    abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 abi_s390_32 abi_s390_64
-  RDEPEND: '!app-admin/eselect-boost !dev-libs/boost-numpy !<dev-libs/leatherman-1.12.0-r1
-    bzip2? ( app-arch/bzip2:=[-mgorny(-)] ) icu? ( >=dev-libs/icu-3.6:=[-mgorny(-)]
-    ) !icu? ( virtual/libiconv[-mgorny(-)] ) lzma? ( app-arch/xz-utils:=[-mgorny(-)]
-    ) mpi? ( >=virtual/mpi-2.0-r4[-mgorny(-),cxx,threads] ) python? ( python_targets_python3_7?
-    ( dev-lang/python:3.7 ) python_targets_python3_9? ( dev-lang/python:3.9 ) python_targets_python3_8?
-    ( dev-lang/python:3.8 ) python_targets_python3_10? ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
+    ) ) zlib? ( sys-libs/zlib:= ) zstd? ( app-arch/zstd:= )
+  IUSE: bzip2 +context debug doc icu lzma +nls mpi numpy python +stacktrace tools
+    zlib zstd python_targets_python3_7 python_targets_python3_9 python_targets_python3_8
+    python_targets_python3_10
+  RDEPEND: bzip2? ( app-arch/bzip2:= ) icu? ( >=dev-libs/icu-3.6:= ) !icu? ( virtual/libiconv
+    ) lzma? ( app-arch/xz-utils:= ) mpi? ( >=virtual/mpi-2.0-r4[cxx,threads] ) python?
+    ( python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
+    ( dev-lang/python:3.9 ) python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python3_10?
+    ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
     numpy? ( dev-python/numpy[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
-    ) ) zlib? ( sys-libs/zlib:=[-mgorny(-)] ) zstd? ( app-arch/zstd:=[-mgorny(-)]
-    )'
+    ) ) zlib? ( sys-libs/zlib:= ) zstd? ( app-arch/zstd:= )
   emerge.packages: dev-libs/boost
   kit: core-kit
   original.package.name: dev-libs/boost
   original.package.slot: "0"
-  original.package.version: 1.78.0-r2
+  original.package.version: 1.83.0
