portage-converter/kits-specs-map.yaml: Add browsers.yaml

--- a/portage-converter/kits-specs-map.yaml
+++ b/portage-converter/kits-specs-map.yaml
@@ -37,6 +37,7 @@ extra-pkgs:
       specs:
         - base-xorg2.yml
         - base-gtk.yml
+        - browsers.yaml
 
     dev-kit:
       specs:
@@ -80,6 +81,7 @@ extra-pkgs:
         - server.yaml
         - x11-misc2.yaml
         - desktop2.yaml
+        - browsers.yaml
 
     core-gl-kit:
       specs:
@@ -344,7 +346,7 @@ extra-pkgs:
         - base-multimedia4.yaml
         - desktop.yaml
         - desktop2.yaml
-
+        - browsers.yaml
 
     qt-kit:
       specs:
@@ -669,6 +671,9 @@ seeds:
 
       - file: e17.yaml
         dir: e17
+
+      - file: browsers.yaml
+        dir: browsers
 
   - name: macaroni-funtoo-race18
     prefix: packages/atoms
