--- a/packages/atoms-extra/dev/dev-python/msgpack/definition.yaml
+++ b/packages/atoms-extra/dev/dev-python/msgpack/definition.yaml
@@ -2,11 +2,10 @@ name: msgpack
 version: 1.0.7
 category: dev-python
 use_flags:
-- -native-extensions
+- -python_targets_python2_7
 - -python_targets_python3_10
 - -python_targets_python3_7
 - -python_targets_python3_8
-- -test
 - python_targets_python3_9
 requires:
 - name: python
@@ -22,22 +21,15 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
-description: MessagePack (de)serializer for Python
+description: MessagePack serializer
 uri:
-- https://msgpack.org https://github.com/msgpack/msgpack-python/ https://pypi.org/project/msgpack/
+- https://pypi.org/project/msgpack/
 license: Apache-2.0
 labels:
   BDEPEND: python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
     ( dev-lang/python:3.9 ) python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python3_10?
     ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
     >=dev-python/setuptools-42.0.2[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
-  DEPEND: dev-python/setuptools[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
-    native-extensions? ( python_targets_python3_7? ( >=dev-python/cython-0.16[python_targets_python3_7(-)?,-python_single_target_python3_7(-),python_targets_python3_9(-)?,-python_single_target_python3_9(-),python_targets_python3_8(-)?,-python_single_target_python3_8(-),python_targets_python3_10(-)?,-python_single_target_python3_10(-)]
-    ) python_targets_python3_9? ( >=dev-python/cython-0.16[python_targets_python3_7(-)?,-python_single_target_python3_7(-),python_targets_python3_9(-)?,-python_single_target_python3_9(-),python_targets_python3_8(-)?,-python_single_target_python3_8(-),python_targets_python3_10(-)?,-python_single_target_python3_10(-)]
-    ) python_targets_python3_8? ( >=dev-python/cython-0.16[python_targets_python3_7(-)?,-python_single_target_python3_7(-),python_targets_python3_9(-)?,-python_single_target_python3_9(-),python_targets_python3_8(-)?,-python_single_target_python3_8(-),python_targets_python3_10(-)?,-python_single_target_python3_10(-)]
-    ) python_targets_python3_10? ( >=dev-python/cython-0.16[python_targets_python3_7(-)?,-python_single_target_python3_7(-),python_targets_python3_9(-)?,-python_single_target_python3_9(-),python_targets_python3_8(-)?,-python_single_target_python3_8(-),python_targets_python3_10(-)?,-python_single_target_python3_10(-)]
-    ) ) test? ( dev-python/six[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
-    )
   IUSE: native-extensions python_targets_python2_7 python_targets_python3_7 python_targets_python3_9
     python_targets_python3_8 python_targets_python3_10
   RDEPEND: python_targets_python2_7? ( dev-python/msgpack-compat ) python_targets_python3_7?
