dev-python/service_identity: Update rdeps

--- a/packages/atoms-extra/dev/dev-python/service_identity/definition.yaml
+++ b/packages/atoms-extra/dev/dev-python/service_identity/definition.yaml
@@ -11,6 +11,9 @@ requires:
 - name: attrs
   version: '>=0'
   category: dev-python
+- name: cryptography
+  version: '>=0'
+  category: dev-python
 - name: pyasn1-modules
   version: '>=0'
   category: dev-python
