dev-python/httpcore: Bump v.0.18.0+1

--- a/packages/atoms-extra/dev/dev-python/httpcore/definition.yaml
+++ b/packages/atoms-extra/dev/dev-python/httpcore/definition.yaml
@@ -1,5 +1,5 @@
 name: httpcore
-version: 0.18.0
+version: 0.18.0+1
 category: dev-python
 use_flags:
 - -python_targets_python3_10
@@ -28,7 +28,7 @@ annotations:
       - ^/var/db/pkg/
 description: A minimal low-level HTTP client.
 uri:
-- https://github.com/encode/httpcore https://pypi.org/project/httpcore/
+- https://pypi.org/project/httpcore/
 license: BSD
 labels:
   BDEPEND: python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
