sys-devel-2.40/binutils: Add provides,conflicts

--- a/packages/atoms/base/sys-devel-2.40/binutils/definition.yaml
+++ b/packages/atoms/base/sys-devel-2.40/binutils/definition.yaml
@@ -9,6 +9,14 @@ requires:
 - name: zlib
   version: '>=0'
   category: sys-libs
+provides:
+- name: binutils
+  version: "2.40"
+  category: sys-devel-2.39
+conflicts:
+- name: binutils
+  version: "<2.40"
+  category: sys-devel-2.39
 annotations:
   subsets:
     rules:
