sys-devel-2.40/binutils: Update provides,conflicts

--- a/packages/atoms/base/sys-devel-2.40/binutils/definition.yaml
+++ b/packages/atoms/base/sys-devel-2.40/binutils/definition.yaml
@@ -13,10 +13,16 @@ provides:
 - name: binutils
   version: "2.40"
   category: sys-devel-2.39
+- name: binutils
+  version: "2.40"
+  category: sys-devel-2.36
 conflicts:
 - name: binutils
   version: "<2.40"
   category: sys-devel-2.39
+- name: binutils
+  version: "<2.40"
+  category: sys-devel-2.36
 annotations:
   subsets:
     rules:
