sys-apps/kmod: Bump v.30

--- a/packages/atoms/base-extra/sys-apps/kmod/definition.yaml
+++ b/packages/atoms/base-extra/sys-apps/kmod/definition.yaml
@@ -1,5 +1,5 @@
 name: kmod
-version: "29"
+version: "30"
 category: sys-apps
 use_flags:
 - -doc
@@ -40,21 +40,21 @@ labels:
     !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.16.1:1.16 >=sys-devel/automake-1.15.1:1.15
     ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
   DEPEND: '!sys-apps/module-init-tools !sys-apps/modutils !<sys-apps/openrc-0.13.8
-    !<sys-apps/systemd-216-r3 lzma? ( >=app-arch/xz-utils-5.0.4-r1 ) python? ( python_targets_python3_7?
-    ( dev-lang/python:3.7 ) python_targets_python3_9? ( dev-lang/python:3.9 ) python_targets_python3_8?
+    lzma? ( >=app-arch/xz-utils-5.0.4-r1 ) python? ( python_targets_python3_7? ( dev-lang/python:3.7
+    ) python_targets_python3_9? ( dev-lang/python:3.9 ) python_targets_python3_8?
     ( dev-lang/python:3.8 ) python_targets_python3_10? ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
-    ) pkcs7? ( >=dev-libs/openssl-1.1.0:0= ) zlib? ( >=sys-libs/zlib-1.2.6 ) zstd?
+    ) pkcs7? ( >=dev-libs/openssl-1.1.0:= ) zlib? ( >=sys-libs/zlib-1.2.6 ) zstd?
     ( >=app-arch/zstd-1.4.4 )'
   IUSE: debug doc +lzma +pkcs7 python static-libs +tools +zlib zstd python_targets_python3_7
     python_targets_python3_9 python_targets_python3_8 python_targets_python3_10
   RDEPEND: '!sys-apps/module-init-tools !sys-apps/modutils !<sys-apps/openrc-0.13.8
-    !<sys-apps/systemd-216-r3 lzma? ( >=app-arch/xz-utils-5.0.4-r1 ) python? ( python_targets_python3_7?
-    ( dev-lang/python:3.7 ) python_targets_python3_9? ( dev-lang/python:3.9 ) python_targets_python3_8?
+    lzma? ( >=app-arch/xz-utils-5.0.4-r1 ) python? ( python_targets_python3_7? ( dev-lang/python:3.7
+    ) python_targets_python3_9? ( dev-lang/python:3.9 ) python_targets_python3_8?
     ( dev-lang/python:3.8 ) python_targets_python3_10? ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
-    ) pkcs7? ( >=dev-libs/openssl-1.1.0:0= ) zlib? ( >=sys-libs/zlib-1.2.6 ) zstd?
+    ) pkcs7? ( >=dev-libs/openssl-1.1.0:= ) zlib? ( >=sys-libs/zlib-1.2.6 ) zstd?
     ( >=app-arch/zstd-1.4.4 )'
   emerge.packages: sys-apps/kmod
   kit: core-kit
   original.package.name: sys-apps/kmod
   original.package.slot: "0"
-  original.package.version: 29-r2
+  original.package.version: "30"
