--- a/packages/virtual/grub/99-macaroni.conf
+++ b/packages/virtual/grub/99-macaroni.conf
@@ -8,3 +8,5 @@ omit_dracutmodules="fcoe"
 # With dracut-059 we need spaces before and later to avoid errors.
 add_drivers+=" dm-crypt "
 
+# Quiet messages: failed to execute '/lib64/elogind/elogind-uaccess-command' '/lib64/elogind/elogind-uaccess-command /dev/dri/card0 ': No such file or directory
+install_items="/lib64/elogind/elogind-uaccess-command"
