dev-python/setuptools-rust: Bump v.1.7.0

--- a/packages/atoms/base-python/dev-python/setuptools-rust/definition.yaml
+++ b/packages/atoms/base-python/dev-python/setuptools-rust/definition.yaml
@@ -1,5 +1,5 @@
 name: setuptools-rust
-version: 1.6.0+1
+version: 1.7.0
 category: dev-python
 use_flags:
 - -python_targets_python3_10
@@ -49,4 +49,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/setuptools-rust
   original.package.slot: "0"
-  original.package.version: 1.6.0
+  original.package.version: 1.7.0
