dev-python/typing-extensions: Update specs

--- a/packages/atoms/base-python/dev-python/typing-extensions/definition.yaml
+++ b/packages/atoms/base-python/dev-python/typing-extensions/definition.yaml
@@ -2,6 +2,8 @@ name: typing-extensions
 version: 4.8.0
 category: dev-python
 use_flags:
+- -python_targets_pypy3
+- -python_targets_python2_7
 - -python_targets_python3_10
 - -python_targets_python3_7
 - -python_targets_python3_8
@@ -20,7 +22,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
-description: Backported and Experimental Type Hints for Python 3.7+
+description: Backported and Experimental Type Hints for Python 3.8+
 uri:
 - https://pypi.org/project/typing-extensions/
 labels:
