atoms/base-python: Review build order

--- a/packages/atoms/base-python/dev-python/setuptools-rust/build.yaml
+++ b/packages/atoms/base-python/dev-python/setuptools-rust/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: setuptools_scm
+- name: libffi
   version: '>=0'
-  category: dev-python
+  category: virtual
