--- a/packages/atoms/base-python/dev-python/cffi/build.yaml
+++ b/packages/atoms/base-python/dev-python/cffi/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: setuptools-rust
+- name: typing-extensions
   version: '>=0'
   category: dev-python
