--- a/packages/atoms/base-python/dev-python/pycparser/build.yaml
+++ b/packages/atoms/base-python/dev-python/pycparser/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: packaging
+- name: ply
   version: '>=0'
   category: dev-python
