--- a/packages/atoms/base-python/dev-python/semantic_version/build.yaml
+++ b/packages/atoms/base-python/dev-python/semantic_version/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libffi
+- name: rust-bin
   version: '>=0'
-  category: virtual
+  category: dev-lang-stable
