--- a/packages/atoms/base-python/dev-python/typing-extensions/build.yaml
+++ b/packages/atoms/base-python/dev-python/typing-extensions/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: pycparser
+- name: setuptools-rust
   version: '>=0'
   category: dev-python
