--- a/packages/atoms/base-python/dev-python/wheel/build.yaml
+++ b/packages/atoms/base-python/dev-python/wheel/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: rust
+- name: cffi
   version: '>=0'
-  category: virtual
+  category: dev-python
