toolchain/base-fs: Update rdeps

--- a/packages/toolchain/base-fs/definition.yaml
+++ b/packages/toolchain/base-fs/definition.yaml
@@ -57,6 +57,9 @@ requires:
   - name: fuse-exfat
     category: sys-fs
     version: '>=0'
+  - name: growpart
+    category: sys-fs
+    version: '>=0'
   - name: lsscsi
     category: sys-fs
     version: '>=0'
