toolchain/base-kde4: Update rdeps

--- a/packages/toolchain/base-kde4/definition.yaml
+++ b/packages/toolchain/base-kde4/definition.yaml
@@ -21,7 +21,13 @@ requires:
   - name: networkmanager-qt
     category: kde-frameworks-5
     version: '>=0'
+  - name: kio-fuse
+    category: kde-misc-5
+    version: '>=0'
   - name: plasma-workspace
+    category: kde-plasma-5
+    version: '>=0'
+  - name: xdg-desktop-portal-kde
     category: kde-plasma-5
     version: '>=0'
   - name: transcode
@@ -38,4 +44,10 @@ requires:
     version: '>=0'
   - name: libqalculate
     category: sci-libs
+    version: '>=0'
+  - name: flatpak
+    category: sys-apps
+    version: '>=0'
+  - name: xdg-desktop-portal
+    category: sys-apps
     version: '>=0'
