toolchain/base-net: Update rdeps

--- a/packages/toolchain/base-net/definition.yaml
+++ b/packages/toolchain/base-net/definition.yaml
@@ -57,6 +57,9 @@ requires:
   - name: libical
     category: dev-libs
     version: '>=0'
+  - name: newt
+    category: dev-libs
+    version: '>=0'
   - name: xmlrpc-c
     category: dev-libs
     version: '>=0'
