toolchain/base-xorg: Update rdeps

--- a/packages/toolchain/base-xorg/definition.yaml
+++ b/packages/toolchain/base-xorg/definition.yaml
@@ -66,6 +66,9 @@ requires:
   - name: clang-common
     category: sys-devel
     version: '>=0'
+  - name: lld
+    category: sys-devel
+    version: '>=0'
   - name: llvm-common
     category: sys-devel
     version: '>=0'
