toolchain/emulation2: Update rdeps

--- a/packages/toolchain/emulation2/definition.yaml
+++ b/packages/toolchain/emulation2/definition.yaml
@@ -24,8 +24,17 @@ requires:
   - name: virt-manager
     category: app-emulation
     version: '>=0'
+  - name: vkd3d
+    category: app-emulation
+    version: '>=0'
   - name: Text-CSV
     category: dev-perl
+    version: '>=0'
+  - name: docker-py
+    category: dev-python
+    version: '>=0'
+  - name: dockerpty
+    category: dev-python
     version: '>=0'
   - name: libvirt-python
     category: dev-python
@@ -48,11 +57,17 @@ requires:
   - name: spice-gtk
     category: net-misc
     version: '>=0'
+  - name: rtkit
+    category: sys-auth
+    version: '>=0'
   - name: open-iscsi
     category: sys-block
     version: '>=0'
   - name: open-isns
     category: sys-block
+    version: '>=0'
+  - name: libostree
+    category: sys-fs
     version: '>=0'
   - name: criu
     category: sys-process
