atoms/base-python: Review build order

--- a/packages/atoms/base-python/dev-python/cryptography/build.yaml
+++ b/packages/atoms/base-python/dev-python/cryptography/build.yaml
@@ -24,7 +24,7 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: toml
+- name: cffi
   version: '>=0'
   category: dev-python
 - name: cffi
