--- a/packages/atoms/base-python/dev-python/packaging/build.yaml
+++ b/packages/atoms/base-python/dev-python/packaging/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: eselect-rust
+- name: tomli
   version: '>=0'
-  category: app-eselect
+  category: dev-python
