atoms-extra/dev: Review build order

--- a/packages/atoms-extra/dev/dev-python/twisted/build.yaml
+++ b/packages/atoms-extra/dev/dev-python/twisted/build.yaml
@@ -27,9 +27,9 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: automat
+- name: incremental
   version: '>=0'
   category: dev-python
-- name: incremental
+- name: h2
   version: '>=0'
   category: dev-python
