--- a/packages/atoms-extra/dev/dev-python/httpcore/build.yaml
+++ b/packages/atoms-extra/dev/dev-python/httpcore/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: hatchling
+- name: hatch-fancy-pypi-readme
   version: '>=0'
   category: dev-python
